# c-ares

./: .!64146!CHANGES.0  .cirrus.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AUTHORS  BACKPORTING.md  CHANGES  CMakeLists.txt  CONTRIBUTING.md  DEVELOPER-NOTES.md  FEATURES.md  FUZZING.md  INSTALL  INSTALL.md  LICENSE.md  Makefile.Watcom  Makefile.am  Makefile.dj  Makefile.inc  Makefile.m32  Makefile.msvc  Makefile.netware  README  README.cares  README.md  RELEASE-NOTES  RELEASE-NOTES.md  RELEASE-PROCEDURE.md  SECURITY.md  acinclude.m4  acountry.c  adig.c  ahost.1  ahost.c  aminclude_static.am  appveyor.yml  ares-cvs  (+127 more)
.github/: dependabot.yml  renovate.json
.github/scripts/: codespell-ignore.txt  qnx_tests.sh
.github/workflows/: all-checks.yml  alpine-latest.yml  android.yml  backport.yml  centos7.yml  clang-format.yml  codespell.yml  coveralls.yml  coverity.yml  dependabot-automerge.yml  djgpp.yml  fedora-latest.yml  freebsd.yml  ios.yml  macos.yml  msys2.yml  netbsd.yml  openbsd.yml  package.yml  qnx.yml  reuse.yml  solaris.yml  sonarcloud.yml  ubuntu-2004.yml  ubuntu-latest.yml  ubuntu-rolling.yml  ubuntu.yml  uwp.yml  watcom.yml  watt32.yml  windows.yml  winuwp.yml
.reuse/: dep5
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/c-ares/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
ci/: build.sh  covupload.sh  distcheck.sh  test.sh
cmake/: EnableWarnings.cmake  msvc_static_runtime.cmake
docs/: Makefile.am  Makefile.inc  acountry.1  adig.1  ahost.1  ares_create_query.3  ares_destroy.3  ares_dns_flags_t.3  ares_dns_mapping.3  ares_dns_record.3  ares_dns_rr.3  ares_dns_rr_get_keys.3  ares_dns_rr_get_opt.3  ares_dns_rr_get_ttl.3  ares_dup.3  ares_fds.3  ares_free_data.3  ares_get_servers.3  ares_getaddrinfo.3  ares_gethostbyaddr.3  ares_gethostbyname.3  ares_getnameinfo.3  ares_getsock.3  ares_init.3  ares_init_options.3  ares_mkquery.3  ares_parse_caa_reply.3  ares_parse_txt_reply.3  ares_parse_uri_reply.3  ares_process.3  ares_process_fd.3  ares_process_pending_write.3  ares_query.3  ares_query_dnsrec.3  ares_queue.3  ares_queue_active_queries.3  ares_queue_wait_empty.3  ares_reinit.3  ares_save_options.3  ares_search.3  (+15 more)
embed/: ares_config.h
examples/: Makefile.am  Makefile.inc
include/: CMakeLists.txt  Makefile.am  ares.h  ares.h.orig  ares_build.h.cmake  ares_build.h.dist  ares_build.h.in  ares_dns.h  ares_dns_record.h  ares_error_codes_internal.h  ares_nameser.h  ares_rules.h  ares_version.h
lib/: Makefile.am  Makefile.inc
m4/: ax_check_user_namespace.m4  ax_check_uts_namespace.m4  cares-compilers.m4  cares-confopts.m4  cares-functions.m4  cares-override.m4  update_autoconf_archive.sh  xc-lt-iface.m4  zz40-xc-ovr.m4
src/: Makefile.am
src/lib/: .!40216!cares.rc  CMakeLists.txt  Makefile.am  Makefile.inc  ares__addrinfo2hostent.c  ares__addrinfo_localhost.c  ares__array.c  ares__buf.c  ares__buf.h  ares__close_sockets.c  ares__dns_record.c  ares__dns_record.h  ares__get_hostent.c  ares__hosts_file.c  ares__htable.c  ares__htable.h  ares__htable_asvp.c  ares__htable_asvp.h  ares__htable_strvp.c  ares__htable_strvp.h  ares__htable_stvp.c  ares__htable_stvp.h  ares__htable_vpvp.c  ares__htable_vpvp.h  ares__iface_ips.c  ares__iface_ips.h  ares__llist.c  ares__llist.h  ares__parse_into_addrinfo.c  ares__parser.c  ares__parser.h  ares__read_line.c  ares__readaddrinfo.c  ares__slist.c  ares__slist.h  ares__socket.c  ares__sortaddrinfo.c  ares__threads.c  ares__threads.h  ares__timeval.c  (+133 more)
src/lib/crypto/: ares_crypto.c  ares_crypto.h  ares_crypto_stubs.c  ares_openssl.c  ares_schannel.c
src/lib/dsa/: ares__array.c  ares__array.h  ares__htable.c  ares__htable_strvp.c  ares__llist.c  ares_array.c  ares_htable.c  ares_htable.h  ares_htable_asvp.c  ares_htable_dict.c  ares_htable_strvp.c  ares_htable_szvp.c  ares_htable_vpstr.c  ares_htable_vpvp.c  ares_llist.c  ares_slist.c  ares_slist.h
src/lib/event/: ares_event.h  ares_event_configchg.c  ares_event_epoll.c  ares_event_kqueue.c  ares_event_poll.c  ares_event_select.c  ares_event_thread.c  ares_event_win32.c  ares_event_win32.h
src/lib/include/: ares__array.h  ares__buf.h  ares__htable_asvp.h  ares__htable_strvp.h  ares__htable_szvp.h  ares__htable_vpvp.h  ares__llist.h  ares_array.h  ares_buf.h  ares_htable_asvp.h  ares_htable_strvp.h  ares_htable_szvp.h  ares_htable_vpvp.h  ares_llist.h  ares_mem.h  ares_punycode.h  ares_str.h
src/lib/legacy/: ares_expand_name.c  ares_expand_string.c  ares_fds.c  ares_getsock.c  ares_parse_a_reply.c  ares_parse_aaaa_reply.c  ares_parse_ns_reply.c
src/lib/record/: ares_dns_mapping.c  ares_dns_multistring.c  ares_dns_multistring.h  ares_dns_name.c  ares_dns_parse.c  ares_dns_private.h  (+2 more)
src/tools/: CMakeLists.txt  Makefile.am  acountry.c  adig.c  ahost.c  ares_getopt.c  ares_getopt.h
test/: .gitignore  CMakeLists.txt  FUZZING.md  Makefile.am  Makefile.inc  Makefile.m32  Makefile.msvc  README.md  aminclude_static.am  ares-fuzz.c  ares-fuzz.cc  ares-requeue-regress.c  ares-test-ai.h  ares-test-fuzz-name.c  ares-test-fuzz-name.c-e  ares-test-fuzz.c  ares-test-fuzz.cc  ares-test-init.cc  ares-test-internal.cc  ares-test-live-ai.cc  ares-test-live.cc  ares-test-live.cc-e  ares-test-main.cc  ares-test-misc.cc  ares-test-misc.cc-e  ares-test-mock-ai.cc  ares-test-mock-et.cc  ares-test-mock.cc  ares-test-mock.cc-e  ares-test-ns.cc  ares-test-parse-a.cc  ares-test-parse-a.cc-e  ares-test-parse-aaaa.cc  ares-test-parse-caa.cc  ares-test-parse-mx.cc  ares-test-parse-naptr.cc  ares-test-parse-ns.cc  ares-test-parse-ptr.cc  ares-test-parse-soa-any.cc  ares-test-parse-soa-any.cc-e  (+22 more)
test/fuzz/: ares_dns_write_fuzzer.c
test/gmock-1.11.0/: README.md  gmock-gtest-all.cc
test/gmock-1.11.0/gmock/: gmock.h
test/gmock-1.11.0/gtest/: gtest.h
tests/: test_invariant_ares_sysconfig_win.py
travis/: build.sh  distcheck.sh  test.sh
vc/: .gitignore
vc/VC12/: c-ares.sln
vc/VC6/: vc6aws.dsw
vc/acountry/: vc6acountry.dsp
vc/adig/: vc6adig.dsp
vc/ahost/: vc6ahost.dsp
vc/cares/: vc6cares.dsp
(+42 files in other folders)
