#***************************************************************************

###########################################################################

AUTOMAKE_OPTIONS = foreign no-dependencies

include Makefile.inc

EXTRA_DIST = $(MANPAGES) ahost.1 adig.1 acountry.1 Makefile.inc CMakeLists.txt
